--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,14 @@
  		<servlet-name>home</servlet-name>
  		<url-pattern>/</url-pattern>
  	</servlet-mapping>
+ 	
+ 	<servlet>
+ 		<servlet-name>point</servlet-name>
+ 		<servlet-class>com.iu.point.PointController</servlet-class>
+ 	</servlet>
+ 	
+ 	<servlet-mapping>
+ 		<servlet-name>point</servlet-name>
+ 		<url-pattern>/point/*</url-pattern>
+ 	</servlet-mapping>
 </web-app>
