--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,4 +19,14 @@
  		<servlet-name>point</servlet-name>
  		<url-pattern>/point/*</url-pattern>
  	</servlet-mapping>
+ 	
+ 	<servlet>
+ 		<servlet-name>member</servlet-name>
+ 		<servlet-class>com.iu.member.MemberController</servlet-class>
+ 	</servlet>
+ 	
+ 	<servlet-mapping>
+ 		<servlet-name>member</servlet-name>
+ 		<url-pattern>/member/*</url-pattern>
+ 	</servlet-mapping>
 </web-app>
