--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,4 +29,14 @@
  		<servlet-name>member</servlet-name>
  		<url-pattern>/member/*</url-pattern>
  	</servlet-mapping>
+ 	
+ 	<servlet>
+ 		<servlet-name>notice</servlet-name>
+ 		<servlet-class>com.iu.notice.NoticeController</servlet-class>
+ 	</servlet>
+ 	
+ 	<servlet-mapping>
+ 		<servlet-name>notice</servlet-name>
+ 		<url-pattern>/notice/*</url-pattern>
+ 	</servlet-mapping>
 </web-app>
