--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+ 	<filter>
+ 		<filter-name>admin</filter-name>
+ 		<filter-class>com.iu.filter.AdminFilter</filter-class>
+ 	</filter>
+ 	
+ 	<filter-mapping>
+ 		<filter-name>admin</filter-name>
+ 		<url-pattern>/notice/noticeAdd</url-pattern>
+ 	</filter-mapping>
+ 	
+ 	<filter>
+ 		<filter-name>encode</filter-name>
+ 		<filter-class>com.iu.filter.EncodingFilter</filter-class>
+ 	</filter>
+ 	
+ 	<filter-mapping>
+ 		<filter-name>encode</filter-name>
+ 		<url-pattern>/*</url-pattern>
+ 	</filter-mapping>
+ 	
  	<servlet>
  		<servlet-name>home</servlet-name>
  		<servlet-class>com.iu.home.HomeController</servlet-class>
